<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.investdream.investdreamandroidapp.RegistroDeInteressados">

    <TextView
        android:id="@+id/nome"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registroInteressadosCampoNome"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fieldNome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        android:maxLength="50" />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/registroInteressadosCampoTelefone"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fieldTelefone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:inputType="phone"
        android:maxLength="10" />


    <TextView
        android:id="@+id/email"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/registroInteressadosCampoEmail"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:inputType="textEmailAddress"
        android:maxLength="50" />

    <TextView
        android:id="@+id/bemDeInteresse"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/registroInteressadosCampoBemDeInteresse"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/fieldBemDeInteresse"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:inputType="text"
        android:maxLength="50" />

    <Button
        android:id="@+id/btRegistrarInteresse"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="420dp"
        android:clickable="true"
        android:enabled="true"
        android:text="Registrar Interesse!"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>
